src/objects/ints__Credit_Summary_Data_Set__c.object
<CustomObject>
    <fields>
        <fullName>ints__CreditSummary__c</fullName>
        <label>Credit Summary</label>
        <referenceTo>ints__Credit_Summary__c</referenceTo>
        <relationshipLabel>CreditSummaryDataSet</relationshipLabel>
        <relationshipName>CreditSummaryDataSet</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ints__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Credit Summary Data Set</label>
    <nameField>
        <displayFormat>CSDS-{0000000000}</displayFormat>
        <label>Credit Summary Data Set Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Summary Data Sets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>